NxDSL/Source/NxDSL/InferenceRules_FRParser.cs
// $ANTLR 3.0 C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g 2007-07-21 21:02:45

using NxDSL;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



internal class InferenceRules_FRParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"RULEBASE", 
		"FACT", 
		"QUERY", 
		"RULE", 
		"PRIORITY", 
		"PRECONDITION", 
		"MUTEX", 
		"IF", 
		"THEN", 
		"DEDUCT", 
		"FORGET", 
		"COUNT", 
		"MODIFY", 
		"AND", 
		"OR", 
		"SPACE", 
		"QUOTE", 
		"NEWLINE", 
		"TAB", 
		"NUMERIC", 
		"CHAR"
    };

    public const int DEDUCT = 13;
    public const int MODIFY = 16;
    public const int RULE = 7;
    public const int RULEBASE = 4;
    public const int CHAR = 24;
    public const int TAB = 22;
    public const int COUNT = 15;
    public const int NUMERIC = 23;
    public const int AND = 17;
    public const int EOF = -1;
    public const int SPACE = 19;
    public const int MUTEX = 10;
    public const int IF = 11;
    public const int QUOTE = 20;
    public const int THEN = 12;
    public const int NEWLINE = 21;
    public const int PRIORITY = 8;
    public const int PRECONDITION = 9;
    public const int OR = 18;
    public const int QUERY = 6;
    public const int FORGET = 14;
    public const int FACT = 5;
    
    
        public InferenceRules_FRParser(ITokenStream input) 
    		: base(input)
    	{
    		InitializeCyclicDFAs();
        }
        

    override public string[] TokenNames
	{
		get { return tokenNames; }
	}

    override public string GrammarFileName
	{
		get { return "C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g"; }
	}

    
    
    internal RuleBaseBuilder rbb;
    
    public override void ReportError(RecognitionException re) {
      throw new DslException(re);
    }


    
    // $ANTLR start rulebase
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:42:1: rulebase : RULEBASE SPACE QUOTE words QUOTE ( rule | query | fact | ignored )* EOF ;
    public void rulebase() // throws RecognitionException [1]
    {   
        words_return words1 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:4: ( RULEBASE SPACE QUOTE words QUOTE ( rule | query | fact | ignored )* EOF )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:4: RULEBASE SPACE QUOTE words QUOTE ( rule | query | fact | ignored )* EOF
            {
            	Match(input,RULEBASE,FOLLOW_RULEBASE_in_rulebase138); 
            	Match(input,SPACE,FOLLOW_SPACE_in_rulebase140); 
            	Match(input,QUOTE,FOLLOW_QUOTE_in_rulebase142); 
            	PushFollow(FOLLOW_words_in_rulebase144);
            	words1 = words();
            	followingStackPointer_--;

            	Match(input,QUOTE,FOLLOW_QUOTE_in_rulebase146); 
            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:37: ( rule | query | fact | ignored )*
            	do 
            	{
            	    int alt1 = 5;
            	    switch ( input.LA(1) ) 
            	    {
            	    case RULE:
            	    	{
            	        alt1 = 1;
            	        }
            	        break;
            	    case QUERY:
            	    	{
            	        alt1 = 2;
            	        }
            	        break;
            	    case FACT:
            	    	{
            	        alt1 = 3;
            	        }
            	        break;
            	    case SPACE:
            	    case NEWLINE:
            	    case TAB:
            	    	{
            	        alt1 = 4;
            	        }
            	        break;
            	    
            	    }
            	
            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:38: rule
            			    {
            			    	PushFollow(FOLLOW_rule_in_rulebase149);
            			    	rule();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            			case 2 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:45: query
            			    {
            			    	PushFollow(FOLLOW_query_in_rulebase153);
            			    	query();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            			case 3 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:53: fact
            			    {
            			    	PushFollow(FOLLOW_fact_in_rulebase157);
            			    	fact();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            			case 4 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:43:60: ignored
            			    {
            			    	PushFollow(FOLLOW_ignored_in_rulebase161);
            			    	ignored();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop1;
            	    }
            	} while (true);
            	
            	loop1:
            		;	// Stops C# compiler whinging that label 'loop1' has no statements

            	Match(input,EOF,FOLLOW_EOF_in_rulebase165); 
            	 rbb.Label = input.ToString(words1.start,words1.stop);
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end rulebase

    
    // $ANTLR start fact
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:45:1: fact : FACT ( SPACE QUOTE words QUOTE )? NEWLINE statement ;
    public void fact() // throws RecognitionException [1]
    {   
        words_return words2 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:45:8: ( FACT ( SPACE QUOTE words QUOTE )? NEWLINE statement )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:45:8: FACT ( SPACE QUOTE words QUOTE )? NEWLINE statement
            {
            	Match(input,FACT,FOLLOW_FACT_in_fact176); 
            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:45:13: ( SPACE QUOTE words QUOTE )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);
            	
            	if ( (LA2_0 == SPACE) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:45:14: SPACE QUOTE words QUOTE
            	        {
            	        	Match(input,SPACE,FOLLOW_SPACE_in_fact179); 
            	        	Match(input,QUOTE,FOLLOW_QUOTE_in_fact181); 
            	        	PushFollow(FOLLOW_words_in_fact183);
            	        	words2 = words();
            	        	followingStackPointer_--;

            	        	Match(input,QUOTE,FOLLOW_QUOTE_in_fact185); 
            	        
            	        }
            	        break;
            	
            	}

            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_fact189); 
            	PushFollow(FOLLOW_statement_in_fact191);
            	statement();
            	followingStackPointer_--;

            	
            				// fix this as soon as I know how to test for the nullity of words
            				try {
            					rbb.AddFact(input.ToString(words2.start,words2.stop));
            				}
            				catch(NullReferenceException) {
            					rbb.AddFact(null);
            				}		
            			
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end fact

    
    // $ANTLR start query
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:55:1: query : QUERY SPACE QUOTE words QUOTE NEWLINE condition ;
    public void query() // throws RecognitionException [1]
    {   
        words_return words3 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:55:9: ( QUERY SPACE QUOTE words QUOTE NEWLINE condition )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:55:9: QUERY SPACE QUOTE words QUOTE NEWLINE condition
            {
            	Match(input,QUERY,FOLLOW_QUERY_in_query201); 
            	Match(input,SPACE,FOLLOW_SPACE_in_query203); 
            	Match(input,QUOTE,FOLLOW_QUOTE_in_query205); 
            	PushFollow(FOLLOW_words_in_query207);
            	words3 = words();
            	followingStackPointer_--;

            	Match(input,QUOTE,FOLLOW_QUOTE_in_query209); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_query211); 
            	PushFollow(FOLLOW_condition_in_query213);
            	condition();
            	followingStackPointer_--;

            	 rbb.AddQuery(input.ToString(words3.start,words3.stop)); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end query

    
    // $ANTLR start rule
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:57:1: rule : RULE SPACE QUOTE words QUOTE NEWLINE meta IF NEWLINE condition action ;
    public void rule() // throws RecognitionException [1]
    {   
        words_return words4 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:57:9: ( RULE SPACE QUOTE words QUOTE NEWLINE meta IF NEWLINE condition action )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:57:9: RULE SPACE QUOTE words QUOTE NEWLINE meta IF NEWLINE condition action
            {
            	Match(input,RULE,FOLLOW_RULE_in_rule224); 
            	Match(input,SPACE,FOLLOW_SPACE_in_rule226); 
            	Match(input,QUOTE,FOLLOW_QUOTE_in_rule228); 
            	PushFollow(FOLLOW_words_in_rule230);
            	words4 = words();
            	followingStackPointer_--;

            	Match(input,QUOTE,FOLLOW_QUOTE_in_rule232); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_rule234); 
            	PushFollow(FOLLOW_meta_in_rule236);
            	meta();
            	followingStackPointer_--;

            	Match(input,IF,FOLLOW_IF_in_rule238); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_rule240); 
            	PushFollow(FOLLOW_condition_in_rule242);
            	condition();
            	followingStackPointer_--;

            	PushFollow(FOLLOW_action_in_rule244);
            	action();
            	followingStackPointer_--;

            	 rbb.AddImplies(input.ToString(words4.start,words4.stop)); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end rule

    
    // $ANTLR start meta
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:1: meta : ( priority )? ( precondition )? ( mutex )* ;
    public void meta() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:8: ( ( priority )? ( precondition )? ( mutex )* )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:8: ( priority )? ( precondition )? ( mutex )*
            {
            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:8: ( priority )?
            	int alt3 = 2;
            	int LA3_0 = input.LA(1);
            	
            	if ( (LA3_0 == TAB) )
            	{
            	    int LA3_1 = input.LA(2);
            	    
            	    if ( (LA3_1 == PRIORITY) )
            	    {
            	        alt3 = 1;
            	    }
            	}
            	switch (alt3) 
            	{
            	    case 1 :
            	        // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:8: priority
            	        {
            	        	PushFollow(FOLLOW_priority_in_meta254);
            	        	priority();
            	        	followingStackPointer_--;

            	        
            	        }
            	        break;
            	
            	}

            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:18: ( precondition )?
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);
            	
            	if ( (LA4_0 == TAB) )
            	{
            	    int LA4_1 = input.LA(2);
            	    
            	    if ( (LA4_1 == PRECONDITION) )
            	    {
            	        alt4 = 1;
            	    }
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:18: precondition
            	        {
            	        	PushFollow(FOLLOW_precondition_in_meta257);
            	        	precondition();
            	        	followingStackPointer_--;

            	        
            	        }
            	        break;
            	
            	}

            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:32: ( mutex )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);
            	    
            	    if ( (LA5_0 == TAB) )
            	    {
            	        alt5 = 1;
            	    }
            	    
            	
            	    switch (alt5) 
            		{
            			case 1 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:59:32: mutex
            			    {
            			    	PushFollow(FOLLOW_mutex_in_meta260);
            			    	mutex();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop5;
            	    }
            	} while (true);
            	
            	loop5:
            		;	// Stops C# compiler whinging that label 'loop5' has no statements

            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end meta

    
    // $ANTLR start priority
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:61:1: priority : TAB PRIORITY SPACE NUMERIC NEWLINE ;
    public void priority() // throws RecognitionException [1]
    {   
        IToken NUMERIC5 = null;
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:62:4: ( TAB PRIORITY SPACE NUMERIC NEWLINE )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:62:4: TAB PRIORITY SPACE NUMERIC NEWLINE
            {
            	Match(input,TAB,FOLLOW_TAB_in_priority270); 
            	Match(input,PRIORITY,FOLLOW_PRIORITY_in_priority272); 
            	Match(input,SPACE,FOLLOW_SPACE_in_priority274); 
            	NUMERIC5 = (IToken)input.LT(1);
            	Match(input,NUMERIC,FOLLOW_NUMERIC_in_priority276); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_priority278); 
            	 rbb.CurrentImplicationData.priority=NUMERIC5.Text; 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end priority

    
    // $ANTLR start precondition
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:64:1: precondition : TAB PRECONDITION SPACE QUOTE words QUOTE NEWLINE ;
    public void precondition() // throws RecognitionException [1]
    {   
        words_return words6 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:65:4: ( TAB PRECONDITION SPACE QUOTE words QUOTE NEWLINE )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:65:4: TAB PRECONDITION SPACE QUOTE words QUOTE NEWLINE
            {
            	Match(input,TAB,FOLLOW_TAB_in_precondition289); 
            	Match(input,PRECONDITION,FOLLOW_PRECONDITION_in_precondition291); 
            	Match(input,SPACE,FOLLOW_SPACE_in_precondition293); 
            	Match(input,QUOTE,FOLLOW_QUOTE_in_precondition295); 
            	PushFollow(FOLLOW_words_in_precondition297);
            	words6 = words();
            	followingStackPointer_--;

            	Match(input,QUOTE,FOLLOW_QUOTE_in_precondition299); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_precondition301); 
            	 rbb.CurrentImplicationData.precondition=input.ToString(words6.start,words6.stop); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end precondition

    
    // $ANTLR start mutex
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:67:1: mutex : TAB MUTEX SPACE QUOTE words QUOTE NEWLINE ;
    public void mutex() // throws RecognitionException [1]
    {   
        words_return words7 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:67:9: ( TAB MUTEX SPACE QUOTE words QUOTE NEWLINE )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:67:9: TAB MUTEX SPACE QUOTE words QUOTE NEWLINE
            {
            	Match(input,TAB,FOLLOW_TAB_in_mutex311); 
            	Match(input,MUTEX,FOLLOW_MUTEX_in_mutex313); 
            	Match(input,SPACE,FOLLOW_SPACE_in_mutex315); 
            	Match(input,QUOTE,FOLLOW_QUOTE_in_mutex317); 
            	PushFollow(FOLLOW_words_in_mutex319);
            	words7 = words();
            	followingStackPointer_--;

            	Match(input,QUOTE,FOLLOW_QUOTE_in_mutex321); 
            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_mutex323); 
            	 rbb.CurrentImplicationData.mutex=input.ToString(words7.start,words7.stop); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end mutex

    
    // $ANTLR start condition
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:69:1: condition : statement ( logic statement )* ;
    public void condition() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:70:4: ( statement ( logic statement )* )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:70:4: statement ( logic statement )*
            {
            	PushFollow(FOLLOW_statement_in_condition334);
            	statement();
            	followingStackPointer_--;

            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:70:14: ( logic statement )*
            	do 
            	{
            	    int alt6 = 2;
            	    alt6 = dfa6.Predict(input);
            	    switch (alt6) 
            		{
            			case 1 :
            			    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:70:15: logic statement
            			    {
            			    	PushFollow(FOLLOW_logic_in_condition337);
            			    	logic();
            			    	followingStackPointer_--;

            			    	PushFollow(FOLLOW_statement_in_condition339);
            			    	statement();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop6;
            	    }
            	} while (true);
            	
            	loop6:
            		;	// Stops C# compiler whinging that label 'loop6' has no statements

            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end condition

    
    // $ANTLR start action
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:72:1: action : THEN SPACE verb NEWLINE statement ;
    public void action() // throws RecognitionException [1]
    {   
        string verb8 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:72:10: ( THEN SPACE verb NEWLINE statement )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:72:10: THEN SPACE verb NEWLINE statement
            {
            	Match(input,THEN,FOLLOW_THEN_in_action349); 
            	Match(input,SPACE,FOLLOW_SPACE_in_action351); 
            	PushFollow(FOLLOW_verb_in_action353);
            	verb8 = verb();
            	followingStackPointer_--;

            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_action355); 
            	PushFollow(FOLLOW_statement_in_action357);
            	statement();
            	followingStackPointer_--;

            	 rbb.CurrentImplicationData.action=verb8; ;
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end action

    
    // $ANTLR start statement
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:74:1: statement : indent words NEWLINE ;
    public void statement() // throws RecognitionException [1]
    {   
        indent_return indent9 = null;

        words_return words10 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:75:4: ( indent words NEWLINE )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:75:4: indent words NEWLINE
            {
            	PushFollow(FOLLOW_indent_in_statement368);
            	indent9 = indent();
            	followingStackPointer_--;

            	PushFollow(FOLLOW_words_in_statement370);
            	words10 = words();
            	followingStackPointer_--;

            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_statement372); 
            	 rbb.AddStatement(input.ToString(indent9.start,indent9.stop).Length, input.ToString(words10.start,words10.stop)); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end statement

    
    // $ANTLR start logic
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:77:1: logic : indent booleanToken NEWLINE ;
    public void logic() // throws RecognitionException [1]
    {   
        indent_return indent11 = null;

        string booleanToken12 = null;
        
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:77:9: ( indent booleanToken NEWLINE )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:77:9: indent booleanToken NEWLINE
            {
            	PushFollow(FOLLOW_indent_in_logic382);
            	indent11 = indent();
            	followingStackPointer_--;

            	PushFollow(FOLLOW_booleanToken_in_logic384);
            	booleanToken12 = booleanToken();
            	followingStackPointer_--;

            	Match(input,NEWLINE,FOLLOW_NEWLINE_in_logic386); 
            	
            				rbb.AddLogicBlock(input.ToString(indent11.start,indent11.stop).Length, booleanToken12);
            			
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end logic

    
    // $ANTLR start verb
    // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:81:1: verb returns [string value] : ( DEDUCT | FORGET | COUNT | MODIFY ) ;
    public string verb() // throws RecognitionException [1]
    {   

        string value = null;
    
        try 
    	{
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:82:4: ( ( DEDUCT | FORGET | COUNT | MODIFY ) )
            // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:82:4: ( DEDUCT | FORGET | COUNT | MODIFY )
            {
            	// C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:82:4: ( DEDUCT | FORGET | COUNT | MODIFY )
            	int alt7 = 4;
            	switch ( input.LA(1) ) 
            	{
            	case DEDUCT:
            		{
            	    alt7 = 1;
            	    }
            	    break;
            	case FORGET:
            		{
            	    alt7 = 2;
            	    }
            	    break;
            	case COUNT:
            		{
            	    alt7 = 3;
            	    }
            	    break;
            	case MODIFY:
            		{
            	    alt7 = 4;
            	    }
            	    break;
            		default:
            		    NoViableAltException nvae_d7s0 =
            		        new NoViableAltException("82:4: ( DEDUCT | FORGET | COUNT | MODIFY )", 7, 0, input);
            	
            		    throw nvae_d7s0;
            	}
            	
            	switch (alt7) 
            	{
            	    case 1 :
            	        // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:82:5: DEDUCT
            	        {
            	        	Match(input,DEDUCT,FOLLOW_DEDUCT_in_verb403); 
            	        	 value =  "assert"; 
            	        
            	        }
            	        break;
            	    case 2 :
            	        // C:\\Documents and Settings\\David Dossot\\My Documents\\NxBRE\\SVN\\trunk\\NxDSL\\Source\\Grammars\\InferenceRules_FR.g:83:5: FORGET
            	        {
            	        	Match(input,FORGET,FOLLOW_FORGET_in_verb411); 
            	        	 value =  "retract"; 
            	        
            	        }
            	        break;
            	    case 3 :
